# PicModelViewerTool

./: .gitignore  CMakeLists.txt  README.md
.qoder/plans/: 万能模型浏览工具_6802dff6.md
resources/: resources.qrc
resources/style/: dark.qss  light.qss  nord.qss  solarized.qss
src/: AssimpToOSGConverter.cpp  AssimpToOSGConverter.h  BatchConvertDialog.cpp  BatchConvertDialog.h  EditCommand.h  GdalInit.h  GdalRasterLoader.cpp  GdalRasterLoader.h  GdalVectorData.h  GdalVectorLoader.cpp  GdalVectorLoader.h  I18nManager.cpp  I18nManager.h  ImageConverter.cpp  ImageConverter.h  ImageViewerWidget.cpp  ImageViewerWidget.h  LightControlDock.cpp  LightControlDock.h  MainWindow.cpp  MainWindow.h  ModelConverter.cpp  ModelConverter.h  ModelInfoDock.cpp  ModelInfoDock.h  ModelLoader.cpp  ModelLoader.h  NodeEditorDock.cpp  NodeEditorDock.h  OSGWidget.cpp  OSGWidget.h  PreProcessDock.cpp  PreProcessDock.h  PreProcessManager.cpp  PreProcessManager.h  RasterConverter.cpp  RasterConverter.h  SceneTreeDock.cpp  SceneTreeDock.h  VectorConverter.cpp  (+6 more)
translations/: ModelViewer_en.qm  ModelViewer_en.ts  ModelViewer_zh_CN.qm  ModelViewer_zh_CN.ts
